commercial/css/commercial.css
::-moz-selection {
  color: black;
  background-color: white;
}
::selection {
  color: black;
  background-color: white;
}

* {
	font-size: 10px;

	color: white;
}

body {
	background-color: black;
}

.container {
}

.info {
	position: fixed;
	width: calc(20vw - 2rem);
	height: fit-content;
	margin: -1rem 0 0 0.25rem;
	padding: 1rem 1rem 0.75rem 0;

	z-index: 1000;
}

.column.gallery {
	position: fixed;
	top: 0;
	left: 0;

	width: calc(80vw - 2rem);
	height: calc(100vh - 2rem);

	overflow: scroll;
	padding: 1rem 1rem 1rem calc(20vw + 1rem);

	display: grid;
	grid-template-rows: auto;
	grid-row-gap: 3rem;
}

.item.work {
	display: grid;
	grid-template-columns: 2fr 9fr;
	grid-column-gap: 1rem;

	width: 100%;
}

.description {
	display: grid;
	grid-template-rows: auto auto;
	grid-row-gap: 0.5rem;

	height: fit-content;
}

p {
	margin: 0;
}

.content {
	display: grid;
	grid-template-rows: auto;
	grid-row-gap: 1rem;

	width: 100%;
	height: auto;

	overflow: hidden;
}

img {
	width: 100%;
	margin-top: 0;

	background-color: #222;
}

.video-container {
	position: relative;
	width: 100%;
	height: fit-content;

	margin-bottom: -2px;
}

.socialvid {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-column-gap: 1rem;

	width: 100%;
	height: fit-content;
}

video {
	width: 100%;

	background-color: #222;
}

.mute-button {
	position: absolute;
	bottom: 1rem;
	right: 1rem;

	padding: 0.5rem;

	background-color: rgba(0,0,0,0.0);
	border: 1px solid white;
}

.mute-button:hover span, 
.mute-button:hover {
	background-color: white;
	color: black;
}


.hidden {
	display: none;
}

.unhidden {
	display: auto;
}







.big {
	font-family: serif;
	font-size: 2rem;
	line-height: 2rem;
}

.small {
	font-family: sans-serif;
	font-size: 1rem;
	font-style: normal;
}

.small.inline {
	line-height: 0rem;
}

.italic {
	font-style: italic;
}

a {
	cursor: alias;

	text-decoration: 1px underline;
	text-underline-offset: 0.2rem;
}

a:hover {
	font-style: italic;
}




@media only screen and (max-width: 870px) {

	.info {
		width: 100%;
		background-color: black;
	}

	.column.gallery {
		width: calc(100vw - 2rem);
		height: calc(100vh - 7rem);
		margin-top: 6rem;
		padding-top: 0;
		padding-bottom: 1rem;
		padding-left: 1rem;
	}

	.item.work {
		grid-template-columns: auto;
		grid-template-rows: auto auto;
		grid-column-gap: 0rem;
		grid-row-gap: 1rem;
	}

	.stack-mobile {
		grid-template-columns: auto;
		grid-template-rows: 1fr 1fr;
		grid-column-gap: 0rem;
		grid-row-gap: 1rem;
	}

	.description {
		grid-row-gap: 0rem;
	}

	.hide-mobile {
		display: none;
	}

}

